# praca

./: .gitignore  README.md  pyproject.toml  requirements.txt
business/: admin.py  forms.py  models.py  urls.py  views.py
business/migrations/: 0001_initial.py  0002_worker_user.py  0003_worker_hired_at_employmentperiod.py  0004_project_worklog.py  0005_timesheethistory.py  0006_alter_project_options_remove_project_client_and_more.py  0007_create_default_projects.py  0008_remove_project_description_project_address.py  0009_project_end_date_project_start_date.py  0010_wallet_wallettransaction.py  0011_alter_wallettransaction_wallet.py  0012_wallettransaction_receipt_image.py  0013_remove_wallet_balance.py  0014_wallettransaction_project_and_more.py  0015_vacation_payroll.py  0016_bonusday.py  0017_payroll_bonuses.py
business/views/: finance.py  payroll.py  project.py  timesheet.py  utils.py  worker.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  managers.py  middleware.py  models.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_user_visible_workers.py  0003_user_first_name_user_last_name.py
templates/: base.html  partials.html
templates/business/: finance_detail.html  finance_list.html  payroll_list.html  project_detail.html  project_list.html  timesheet_grid.html  worker_form.html  worker_history.html  worker_list.html  worker_promote_form.html
templates/core/: dashboard.html  login.html  password_change.html  register.html
tests/business/: test_finance.py  test_models.py  test_payroll.py  test_projects.py  (+5 more)
(+4 files in other folders)
